fixed vertical align

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -31,7 +31,7 @@ header {
 
 footer {
   font-size: 40px;
-  vertical-align: auto;
+  vertical-align: middle;
   text-align: center;
 }
 
